update header/content alignment issues

--- a/appearance/css/scss/partials/_base.scss
+++ b/appearance/css/scss/partials/_base.scss
@@ -87,8 +87,10 @@ ARTICLE STYLES
 /*********************
 HEADER SYTLES
 *********************/
-.header {
-
+header {
+	#inner-header{
+		padding: 0 20px;
+	}
 }
 
 /*********************
